# app/Http/Requests/StoreOrderRequest.php
@@ -1,0 +1,34 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class StoreOrderRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'reference_no' => ['required', 'string', 'max:255'],
+            'sales_id' => ['required', 'integer', 'exists:sales,id'],
+            'customer_id' => ['required', 'integer', 'exists:customers,id'],
+
+            'items' => ['required', 'array'],
+            'items.*.quantity' => ['required', 'integer', 'min:1'],
+            'items.*.product_id' => ['required', 'integer', 'exists:products,id'],
+        ];
+    }
+}
