# routes/api.php
@@ -1,11 +1,13 @@
 <?php
 
 use App\Http\Controllers\CustomerController;
+use App\Http\Controllers\OrderController;
 use App\Http\Controllers\Report;
 use Illuminate\Support\Facades\Route;
 
 Route::prefix('v1')->group(function () {
     Route::apiResource('customers', CustomerController::class);
+    Route::apiResource('orders', OrderController::class);
 
     Route::prefix('reports')->group(function () {
         Route::prefix('orders')->group(function () {
